--- a/octokart/templates/seller/login.html
+++ b/octokart/templates/seller/login.html
@@ -1,21 +1,15 @@
-<!DOCTYPE html>
-<html>
-    <head>
-        <title>Login to Octokart</title>
-    </head>
+{% extends 'base.html' %}
+{% block content %}
+<h1>Login to Octokart</h1>
 
-    <body>
-        <h1>Login to Octokart</h1>
+<form id="login_form" method="post" action="/seller/login/">
+    {% csrf_token %}
+    Username: <input type="text" name="username" value="" size="50" />
+    <br />
+    Password: <input type="password" name="password" value="" size="50" />
+    <br />
 
-        <form id="login_form" method="post" action="/seller/login/">
-            {% csrf_token %}
-            Username: <input type="text" name="username" value="" size="50" />
-            <br />
-            Password: <input type="password" name="password" value="" size="50" />
-            <br />
+    <input type="submit" value="submit" />
+</form>
 
-            <input type="submit" value="submit" />
-        </form>
-
-    </body>
-</html>
+{% endblock %}
