--- a/octokartseller/templates/store/homepage.html
+++ b/octokartseller/templates/store/homepage.html
@@ -14,6 +14,7 @@
         
     </head>
     <body>
+        <input type="hidden" value="{{seller_id}}" id="seller_id">
         <div class="container">
             <div class="col-xs-8 cox-xs-offset-2">
                 <table class="table col-xs-10 col-xs-offset-1">
