Implements Locking without Waiting

--- a/octokart/templates/transactions/manager.html
+++ b/octokart/templates/transactions/manager.html
@@ -9,6 +9,8 @@
 </form>
 <button id="delete-connections" onclick="location.href='/transactions/connections_manager/delete_connections/';">Delete All Connections</button>
 <button id="perform-transaction" onclick="location.href='/transactions/perform_transaction/';">Perform Transaction</button>
+<button id="empty-item" onclick="location.href='/locks/items/empty/';">Empty Item Locks</button>
+<button id="empty-seller" onclick="location.href='/locks/seller/empty/';">Empty Seller Locks</button>
 <hr>
 <ul>
 {% for conn in connections %}
