store frontend done

--- a/octokart/store/templates/store_index.html
+++ b/octokart/store/templates/store_index.html
@@ -16,8 +16,8 @@
 			<thead>
 				<tr>
 					<th>Item</th>
-					<th>Desc</th>
-					<th>Upvotes</th>
+					<th>Quantity</th>
+					<th>Buy</th>
 				</tr>
 				
 			</thead>
