--- a/octokart/templates/store/specific_item.html
+++ b/octokart/templates/store/specific_item.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 {% block content %}
-<h1 align = "center">{{ item_name }}</h1>
+<h1 align = "center" id="item-name">{{ item_name }}</h1>
 <h2 align = "center"> Sellers </h2>
 <div class="container">
 	<table class="table">
