--- a/octokart/templates/store/homepage.html
+++ b/octokart/templates/store/homepage.html
@@ -10,7 +10,7 @@
         
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
         <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
-        <script src="{% static 'js/store.js' %}"></script>
+        <script src="{% static 'js/octokartseller.js' %}"></script>
         
     </head>
     <body>
